@@ -1,5 +1,7 @@
 2015-08-18  Carl Hetherington  <cth@carlh.net>
 
+	* Add configuration for DCP creator metadata.
+
 	* Version 2.1.40 released.
 
 2015-08-18  Carl Hetherington  <cth@carlh.net>
